# el_sales

./: .env-sample  README.md  db.json  pyproject.toml
config/: settings.py  urls.py
networkapp/: admin.py  models.py  serializers.py  urls.py  views.py
networkapp/migrations/: 0001_initial.py  0002_supplier.py  0003_alter_supplier_supplier_type.py  0004_alter_supplier_supplier_type.py  0005_contact_alter_supplier_house_number.py  0006_link.py  0007_link_created_at.py  0008_link_link_type_alter_link_supplier_delete_supplier.py  0009_link_products.py  0010_alter_link_supplier.py  0011_remove_link_link_type_contact_link_type_and_more.py  0012_alter_link_options.py
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
